--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,9 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Big Cat Images 🐯🦁</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
+      Use images of <strong>Lions</strong> , <strong>Tigers</strong> , <strong>Leopards</strong> , or
       all three!
     </p>
     <div class='content'>
