--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,10 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Big Cat Images 🐯🦁</div>
+    <div class='title'>ServiceMind Object Classification 👷</div>
     <p>
-      Use images of <strong>Lions</strong> , <strong>Tigers</strong> , <strong>Leopards</strong> , or
-      all three!
+      Use images of <strong>Air Conditioner</strong> , <strong>Door Knob</strong> , <strong>Wash Basin</strong> ,or 
+      <strong>Toilet Bowl</strong>
     </p>
     <div class='content'>
       <div class='no-display'>
